--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,20 @@
 /* font */
 .font2{font-family: 'Quicksand', sans-serif;}
 .fontheavy{font-weight: bold;}
+.bigtitle{font-size: 350%;}
 .bigfont{font-size: 2rem;}
+span{font-weight: bold;}
 /* colour */
 .green{background-color:rgba(13, 122, 55, 0.856);}
 .redB{background-color: rgb(179, 14, 14);}
-.white{color: rgb(255, 255, 255);}
-.red{color:rgba(236, 13, 13, 0.863);}
+.white{color: rgba(255, 255, 255, 0.671);}
+.red{color:rgba(180, 20, 20, 0.863);}
 .yellow{color:rgb(221, 235, 23)}
 .grey{color: rgb(107, 105, 105);}
 .black{color: rgb(0, 0, 0)};
 .highlight{color: rgb(120, 45, 170)};
 .nodeco{text-decoration: none; }
+.nobg{background:none;}
 
 /* position */
 .hidden{display: none;}
@@ -25,7 +28,7 @@
     border-radius: 10px;
 }
 .shadowborder{
-    border:rgba(71, 71, 71, 0.315)solid 5px;
+    border:rgba(87, 35, 15, 0.452)solid 5px;
 }
 
 .scroll{ 
@@ -34,38 +37,90 @@
 
 .top{z-index:1051 }
 
-#Homebtn{width: fit-content; border-radius: 10px; border: solid chocolate; background: rosybrown; }
-#Homebtn a{color: white;text-decoration: none; font-size: 4rem;}
-
-/* Body parts */
-
-.navbar{
-    font-family: 'Playfair Display', serif;
+/* logo design */
+#homelogo{
+  position: relative;
+  font-family: Impact, sans-serif;
+  font-size: 45px;
+  letter-spacing: 2px;
+  background-image: url(./fire.jpg);
+  background-repeat: no-repeat;
+  background-size: 120%;
+  animation: animate 3s;
+  animation-direction: alternate-reverse;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(255, 40, 40, 0);
 }
 
+@keyframes animate {
+    0% {
+      background-position: -500%;
+    }
+    100% {
+      background-position: 500%;
+    }
+  }
+
+/*  */
 body{
+    background-color: rgba(129, 66, 2, 0.507);
     font-family: 'Playfair Display', serif;
     font-weight: 300;
 }
 
+#indexpage{
+    background-image: url('./street.jpg'); 
+    background-repeat: no-repeat; 
+    background-position: cover;
+}
+
+#Homebtn{
+    width: fit-content; 
+    border-radius: 10px; 
+    border: solid chocolate; 
+    background: rosybrown; }
+
+#Homebtn a{
+    color: white;
+    text-decoration: none; 
+    font-size: 4rem;}
+
+#searchbarinput{
+    border: rgba(36, 36, 36, 0.493) solid 1px;
+    background: transparent;
+}    
+
 .footer{
-font-family: 'Quicksand', sans-serif; 
-padding: 2rem 8rem;   
+   font-family: 'Quicksand', sans-serif; 
+   padding: 2rem 8rem;   
+}
+
+/* navbar */
+.navbar{
+    font-family: 'Playfair Display', serif;
+    background-color: #69696910;
+    padding: 0;
+    width: 100%;
+    height: 10%;
+}
+
+#navrecipe:hover{
+    color: wheat;
 }
 
 
-/* navbar */
+
 #dropdown{
-    
-    padding-right: 10rem;
+    padding: 1rem;
 }
 #dropdownmenu{
     width: 270px;
+    transform: translate(-50%)
    
 }
 
 #welcomeuser{
-padding: 1rem;
+    padding: 1rem;
 }
 
 .lgicon{
@@ -73,17 +128,25 @@ padding: 1rem;
     height: 3rem;
 }
 
-.lgicon:hover{ filter: opacity(0.5); cursor: pointer;}
+.lgicon:hover{ 
+    filter: opacity(0.5); 
+    cursor: pointer;}
 
 .icon2{
     width: 2rem;
     height: 2rem;
 }
 
-.icon2:hover{ filter: opacity(0.5); cursor: pointer;}
+.icon2:hover{ 
+    filter: opacity(0.5); 
+    cursor: pointer;}
 
-#selectTB{border: none;}
+#selectTB{
+    border: none; 
+    background: none; }
+
 /* index page */
+
 .book{
     border: solid 1px rgb(0, 0, 0);
     padding: 1rem;
@@ -137,6 +200,7 @@ padding: 1rem;
 
 #recipemain{
     border: none;
+    background-color: rgba(253, 38, 81, 0.322);
 }
 
 #food{
@@ -332,4 +396,5 @@ padding: 1rem;
     overflow-x: none;
     }
     #recipebox{min-height: fit-content;}
+    
 }
