--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@
         <input class="form-control my-lg-2 mx-4 col-sm-10 col-md-6" type="password" name="password" placeholder="Password"
             aria-label="Password">
 
-         <button id="login" class="btn btn-outline-primary mt-4 mx-4 col-sm-10 col-md-6" type="submit" value="Login">
+         <button id="login2" class="btn btn-outline-primary mt-4 mx-4 col-sm-10 col-md-6" type="submit" value="Login">
                     Login
         </button>
             
