--- a/public/style.css
+++ b/public/style.css
@@ -200,7 +200,7 @@ body{
 
 #recipemain{
     border: none;
-    background-color: rgba(253, 38, 81, 0.322);
+    background-color: rgb(245, 87, 87);
 }
 
 #food{
