--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,8 +2,7 @@
 
     <!-- pic screen -->
     <div class="screen col-sm-12 col-md-8 col-lg-6">
-        <br>
-        <h2 id="whattoeat" class="white pt-4">What to eat today?</h2>
+        <h1 id="whattoeat" class="pt2-2 fontheavy font3">What to eat today?</h1>
         <video id="screenvideo" src="bg2.mp4"></video>
 
 
@@ -12,17 +11,19 @@
             <div id="recipenum">
                 <h1 class="mt-lg-2 fontheavy">
                     {{name}}</h1>
-                <h3>We've got <span style="color: rgba(255, 255, 255, 0.726);">{{numberofrecipe}}</span> recipes of {{name}}</h3>
+                <h3>We've got <span style="color: rgba(255, 255, 255, 0.726);">{{numberofrecipe}}</span> recipes of
+                    {{name}}</h3>
 
-                <img class="smallpic pb-2"                     src="{{image_url}}"alt="food image">
-               <br> <button id="call-btn" type="button" class="animate__animated animate__jello btn 
-                btn-danger btn-lg"><a class="white" href="/recipe:{{recipeid.recipe_id}}"> View our famous recipe</a></button>
+                <img class="smallpic pb-2" src="{{image_url}}" alt="food image">
+                <br> <button id="call-btn" type="button" class="animate__animated animate__jello btn 
+                btn-danger btn-lg"><a class="white" href="/recipe:{{recipeid.recipe_id}}"> View our famous
+                        recipe</a></button>
             </div>
 
         </div>
 
 
-        <div id="buttonset" class="center mb-4">
+        <div id="buttonset" class="center">
             <img src="start1.png" id="start-btn" class="lgicon mx-4 knob" alt="startBTN">
             <img src="stop1.png" id="stop-btn" class="lgicon mx-4 knob" alt="stopBTN">
         </div>
