--- a/views/recipeindex.handlebars
+++ b/views/recipeindex.handlebars
@@ -1,19 +1,31 @@
 <nav id="recipemain" class="book cotainer-fluid row sticky-top navbar">
     <!-- filters -->
-    
-    <div id="filters" class="font2">
+
+    <div id="filters" class="font2 pt-2">
         {{#unless selectTB}}
-        <button type="button" class="btn btn-outline-dark">BBQ</button>
-        <button type="button" class="btn btn-outline-dark">DESSERT</button>
-        <button type="button" class="btn btn-outline-dark">FRIED</button>
-        <button type="button" class="btn btn-outline-dark">STEAMED</button>
-        <button type="button" class="btn btn-outline-dark">All</button><br>
-        <button type="button" class="btn btn-outline-dark">Cantonese</button>
-        <button type="button" class="btn btn-outline-dark">Chinese</button>
-        <button type="button" class="btn btn-outline-dark">Japanese</button>
-        <button type="button" class="btn btn-outline-dark">Korean</button>
-        <button type="button" class="btn btn-outline-dark">Thai</button>
-        <button type="button" class="btn btn-outline-dark">All</button>
+        <button type="button" class="btn btn-outline-light clickedbtn">All</button>
+
+        <button type="button" class="btn btn-outline-light">BAKED</button>
+        <button type="button" class="btn btn-outline-light">BBQ</button>
+        <button type="button" class="btn btn-outline-light">DESSERT</button>
+        <button type="button" class="btn btn-outline-light">FRIED</button>
+        <button type="button" class="btn btn-outline-light">SOUPY</button>
+        <button type="button" class="btn btn-outline-light">SOUR</button>
+        <button type="button" class="btn btn-outline-light">STEAMED</button>
+        <button type="button" class="btn btn-outline-light">SPICY</button>
+        <button type="button" class="btn btn-outline-light">SWEET</button>
+
+        <BR>
+
+        <button type="button" class="btn btn-outline-light">Cantonese</button>
+        <button type="button" class="btn btn-outline-light">Chinese</button>
+        <button type="button" class="btn btn-outline-light">Japanese</button>
+        <button type="button" class="btn btn-outline-light">Korean</button>
+        <button type="button" class="btn btn-outline-light">Thai</button>
+                <button type="button" class="btn btn-outline-light">Appetizer</button>
+        <button type="button" class="btn btn-outline-light">Vegeterian</button>
+
+
         {{/unless}}
         <input class="hidden" type="text" id="recipe_tag" />
     </div>
