--- a/views/mypage.handlebars
+++ b/views/mypage.handlebars
@@ -1,3 +1,4 @@
+<div class="center">
 <div class="book roundborder cotainer-fluid row" id="mypagebox">
     <h1 class="p-4 grey">Hi {{user_name}}!</h1>
 
@@ -144,4 +145,5 @@
     {{/each}}
 
 
+</div>
 </div>
