about page picture

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,64 +1,88 @@
 <!--jumbotron  -->
-    <div class="section jumbotron jumbotron-fluid container-fluid center">
-        
-        <h1 class="display-4 animate__animated animate__zoomIn white font2 fontheavy">Hey, hungry!</h1>
+<div class="section jumbotron jumbotron-fluid container-fluid center col-12 ml-sm-2 ml-md-0">
 
-        <h1><br>WELCOME TO STREET FOOD HUNTERS!</h1>
-        <hr class="line">
+    <h1 class="display-4 animate__animated animate__zoomIn white font2 fontheavy">Hey, hungry!</h1>
+
+    <h1><br>WELCOME TO STREET FOOD HUNTERS!</h1>
+    <hr class="line">
+
+    <br>
+    <a class="btn btn-danger btn-lg" style="width: 13rem; font-size: medium" href="#first" role="button">ABOUT US</a>
+</div>
+
+
+
+<!-- container1 -->
+<div id="first" class="center section main1 container-fluid slideInDown ml-sm-2 ml-md-0">
+    <h1>WHY STREET FOOD?</h1><br>
+    <hr class="line">
+    <h2 class="text-black-50">
+
+        <span>"</span> Sometimes you miss THAT food you had in the night market during your trip to
+        somewhere<span>"</span>
+    </h2>
+
+    <h4>We genuinely love foods and really want to let people share their own secret recipes!</h4>
+
+    <button type="button" id="exploreButton" class="red btn btn-light">
+        Check us out</button>
+
+    <div id="more" class="hidden black ml-sm-2 ml-md-0">
 
         <br>
-        <a class="btn btn-danger btn-lg" style="width: 13rem; font-size: medium" href="#third" role="button">ABOUT US</a>
-    </div>
-
-
-
-    <!-- container1 -->
-    <div id="first" class="section main1 container-fluid slideInDown">
-        <h1>WHY STREET FOOD?</h1><br>
-        <hr class="line">
-        <h3 class="text-black-50">
-
-            <span>"</span> Sometimes you miss THAT food you had in the night market during your holiday to somewhere<span>"</span>
-        </h3>
-
-        <p>Always keen on meeting people from different backgrounds. Started from Thailand, I lived in UK, Vietnam and
-            now in Hong Kong! </p>
-
-        <button type="button" id="exploreButton" class="btn btn-light">
-            Explore more</button>
-
-        <div id="more" class="hidden">
-            <br>
-            <h3 class="text-black-50">What did you do before?</h3>
-            <p>
-                Right before joining this Bootcamp, I worked for Matchesfashion.com as a fraud analyst which is one of
-                the
-                biggest luxury fashion<br>e-commerce platforms.I mainly analise live orders, detect suspicious orders
-                and
-                further investigate them. It was being like an online detective!<br> During work,I had to use an
-                undercover name. I was Amy Santiago! Before this role, I worked for Burberry e-commerce customer service
-                team. <br>With my experience, I have depth knowledge of E-commerce and luxury fashion market.</p>
-            <br>
-            <h3 class="text-black-50">Why Web Developer?</h3>
-            <p>In both positions, I came accross many situations that I want company platforms to be adjusted or to
-                create
-                new platform which are more user friendly.<br> Even though I was in position of represent of user
-                testing
-                for certain project, there were lots of limitations within company's procedure. <br>So I decided to
-                learn
-                myself how to create the programs, combining with my understanding of user's experience.
-            </p>
-
-            <br><br><button type="button" class="btn btn-light">
-                <a href="https://drive.google.com/file/d/1as7ZxWBxksXu9GHmm4VlcaqUkhztD-cS/view?usp=sharing">Download CV</a> </button>
-
-
-            <br><i id="close" class="fas fa-chevron-up" style="font-size:2rem; padding-top: 3rem;"></i>
+        <div class="row center col-12">
+            <div class="row1_profile col-12">
+                <img src="alex.png" alt="a" class="profilepic">
+            </div>
+            <div class="row2_profile col-10">
+                <h1 class="font2">Alex Cheung</h1>
+                <h4>
+                    Hi! I am Alex and I love foods and pocketmon!
+                </h4>
+            </div>
         </div>
 
-    </div>
 
-    {{!-- <!-- container3 -->
+        <br>
+        <div class="row center col-12">
+            <div class="row1_profile">
+
+                <img src="christine.jpg" alt="c" class="profilepic col-12"></div>
+
+            <div class="row2_profile col-10">
+                <h1 class="font2">Christine Chen</h1>
+                <h4>
+                    Hi! I am Christine and I also love foods and photography!
+                </h4>
+            </div>
+        </div>
+        <br>
+
+
+
+        <div class="row center col-12">
+            <div class="row1_profile col-12">
+
+                <img src="pullip.jpg" alt="p" class="profilepic">
+            </div>
+
+            <div class="row2_profile col-10">
+                <h1 class="font2">Pullip Lee</h1>
+                <h4>
+                    Hi! I am Pullip and I live to eat. I workout to eat more!
+                </h4>
+            </div>
+            <br>
+        </div>
+
+        <div class="row center"><i id="close" class="fas fa-chevron-up" style="font-size:2rem; padding-top: 3rem;"></i>
+        </div>
+
+
+    </div>
+</div>
+
+{{!-- <!-- container3 -->
 
     <div id="third" class="section main3 container-fluid">
         <h1>Describe Me</h1>
@@ -88,8 +112,7 @@
                 </p>
             </div>
         </div> --}}
-    </div>
+</div>
 
 
-    </div>
-
+</div>
