--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@
 .bigfont{font-size: 2rem;}
 span{font-weight: bold;}
 /* colour */
-.green{background-color:rgba(13, 122, 55, 0.856);}
+.green{background-color:rgba(1, 95, 102, 0.856);}
 .redB{background-color: rgb(179, 14, 14);}
 .white{color: rgba(255, 255, 255, 0.671);}
 .red{color:rgba(180, 20, 20, 0.863);}
@@ -415,7 +415,7 @@ body{
 /* About */
 
 .jumbotron{
-    background-image: url(./bgpic5.jpg);
+    background-image: url(./street.jpg);
     flex-direction: column;
     margin-bottom:0;
     background-color: transparent; 
@@ -433,10 +433,19 @@ body{
 }
 
 .main1{
-    background-color: rgba(90, 89, 18, 0.445);
+    background-color: rgba(255, 123, 0, 0.445);
     flex-direction: column;
     color: white;
     padding-top: 8%;
     padding-bottom: 8%;
     
     }
+
+.profilepic{
+    width: 40rem;
+    height: 35rem;
+}
+
+#close:hover{
+    filter: brightness(0.8);
+}
