--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,7 @@ span{font-weight: bold;}
 .yellow{color:rgb(236, 201, 42)}
 .grey{color: rgb(107, 105, 105);}
 .black{color: rgb(0, 0, 0)};
+.blue{color: rgb(97, 97, 160);}
 .highlight{color: rgb(120, 45, 170)};
 .nodeco{text-decoration: none; }
 .nobg{background:none;}
