--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -36,8 +36,8 @@
             </div>
             <div class="row2_profile col-10">
                 <h1 class="font2">Alex Cheung</h1>
-                <h4>
-                    Hi! I am Alex and I love foods and pocketmon!
+                <h4 >
+                    <span class="white">" </span>Hi! I am Alex and I love foods and pocketmon!  <span class="white">"</span>
                 </h4>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <div class="row2_profile col-10">
                 <h1 class="font2">Christine Chen</h1>
                 <h4>
-                    Hi! I am Christine and I also love foods and photography!
+                     <span class="white">" </span>Hi! I am Christine and I also love foods and photography!<span class="white">"</span>
                 </h4>
             </div>
         </div>
@@ -69,7 +69,7 @@
             <div class="row2_profile col-10">
                 <h1 class="font2">Pullip Lee</h1>
                 <h4>
-                    Hi! I am Pullip and I live to eat. I workout to eat more!
+                   <span class="white">" </span> Hi! I am Pullip and I live to eat. I workout to eat more!<span class="white">"</span>
                 </h4>
             </div>
             <br>
